crates/ark/src/snapshots/ark__console_annotate__tests__annotate_source_with_breakpoint.snap
---
source: crates/ark/src/console_annotate.rs
expression: result
---
{
#line 1 "file:///test.R"
foo <- function() {
base::.ark_auto_step(base::.ark_breakpoint(browser(), "file:///test.R", "1"))
#line 2 "file:///test.R"
  x <- 1
base::.ark_auto_step(base::.ark_verify_breakpoints_range("file:///test.R", 2L, 3L))
#line 3 "file:///test.R"
  y <- 2
}
base::.ark_auto_step(base::.ark_verify_breakpoints_range("file:///test.R", 1L, 5L))
#line 5 "file:///test.R"
bar <- 3
}
base::.ark_auto_step(base::.ark_verify_breakpoints_range("file:///test.R", 1L, 6L))
