crates/ark/src/snapshots/ark__console_annotate__tests__inject_breakpoints_before_within_after_nested.snap
---
source: crates/ark/src/console_annotate.rs
expression: result
---
base::.ark_breakpoint(browser(), "file:///test.R", "1")
#line 1 "file:///test.R"
x <- 1
f <- function() {
base::.ark_breakpoint(browser(), "file:///test.R", "2")
#line 3 "file:///test.R"
  y <- 2
  z <- 3
}
base::.ark_breakpoint(browser(), "file:///test.R", "3")
#line 6 "file:///test.R"
w <- 4
