crates/ark/src/snapshots/ark__console_annotate__tests__inject_breakpoints_doubly_nested_braces.snap
---
source: crates/ark/src/console_annotate.rs
expression: result
---
#line 1 "file:///test.R"
{
  {
base::.ark_auto_step(base::.ark_breakpoint(browser(), "file:///test.R", "1"))
#line 3 "file:///test.R"
    1
base::.ark_auto_step(base::.ark_verify_breakpoints_range("file:///test.R", 3L, 4L))
#line 4 "file:///test.R"
    2
  }
}
