crates/ark/src/snapshots/ark__console_annotate__tests__inject_breakpoints_empty_brace_sibling.snap
---
source: crates/ark/src/console_annotate.rs
expression: result
---
{
  x <- 1
base::.ark_auto_step(base::.ark_breakpoint(browser(), "file:///test.R", "1"))
#line 3 "file:///test.R"
  {}
}
