crates/ark/src/snapshots/ark__console_annotate__tests__inject_breakpoints_in_brace_list.snap
---
source: crates/ark/src/console_annotate.rs
expression: result
---
f <- function() {
  x <- 1
.ark_breakpoint(browser(), 1)
#line 3 "file:///test.R"
  y <- 2
}
