crates/ark/src/snapshots/ark__console_annotate__tests__inject_breakpoints_inside_multiline_expr_anchors_to_start.snap
---
source: crates/ark/src/console_annotate.rs
expression: result
---
#line 1 "file:///test.R"
{
base::.ark_auto_step(base::.ark_breakpoint(browser(), "file:///test.R", "1"))
#line 2 "file:///test.R"
  x +
    y
base::.ark_auto_step(base::.ark_verify_breakpoints_range("file:///test.R", 2L, 4L))
#line 4 "file:///test.R"
  z
}
